updated user scripts

--- a/user/vizseq_evaluation_for_fairseq_generation_log.ipynb
+++ b/user/vizseq_evaluation_for_fairseq_generation_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nbest5\n",
+      "21132\n",
+      "Grüezi \" <NAME> \" besten Dank für ihren kürzlichen Aufenthalt bei uns - schade , dass sie diesen in so schlechter Erinnerung haben . sie haben bei uns ein Duplex Zimmer gebucht ( und bezogen ) , was ein grosszügiges , zweistöckiges Zimmer im \" Elements \" ist . beim Check-In haben sie uns versichert , dass alles in bester Ordnung sei und auf die Begleitung einer Réceptionistin aufs Zimmer verzichtet . hat dies evtl. zu Missverständnissen geführt ? das seerose Resort & Spa ist ein ausgesprochen beliebter Ort , um Hochzeiten zu feiern . wir bedauern sehr , dass sie durch die Musik am Schlafen gehindert wurden und hätten ihnen gerne Alternativen angeboten , hätten wir davon Kenntnis gehabt . da wir höchsten Wert auf Freundlichkeit , Authentizität und Professionalität legen , nehmen alle unsere Mitarbeitenden regelmässig an verschiedenen Schulungen teil , mit dem erklärten Ziel , eine offene , transparente und lösungsorientierte Kommunikation mit dem Gast führen zu können . wir bedauern , dass sie uns durch ihre <<unk>> Abreise keine Gelegenheit gegeben haben , nach ihrem Befinden zu fragen und gegebenenfalls vor Ort auf ihre Kritik einzugehen . <SALUTATION>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(len(h['nbest5']))\n",
+    "print(list(h.keys())[0])\n",
+    "print(len(r['0']))\n",
+    "print(r['0'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +83,7 @@
        "'<GREETING> , vielen Dank , dass sie sich die Zeit genommen haben , uns ihre Meinung zu ihrem Aufenthalt bei uns mitzuteilen . wir freuen uns , dass ihnen der Aufenthalt bei uns gefallen hat und hoffen , sie bald wieder bei uns begrüßen zu dürfen ! <SALUTATION>'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -80,23 +102,21 @@
      "output_type": "stream",
      "text": [
       "CORPUS DISTINCT 1: 0.027594829754552536\n",
-      "SENTENCE AVERAGE DISTINCT 1: 76.94394749927146\n",
-      "CORPUS DISTINCT 2: 0.06291814875254116\n",
-      "SENTENCE AVERAGE DISTINCT 2: 92.96396698202916\n"
+      "CORPUS DISTINCT 2: 0.06291814875254116\n"
      ]
     }
    ],
    "source": [
     "print(f\"CORPUS DISTINCT 1: {distn.get_corpus_distinct(h['nbest5'], 1)}\")\n",
-    "print(f\"SENTENCE AVERAGE DISTINCT 1: {distn.calc_sentence_distinct_average(h['nbest5'], 1)}\")\n",
+    "# print(f\"SENTENCE AVERAGE DISTINCT 1: {distn.calc_sentence_distinct_average(h['nbest5'], 1)}\")\n",
     "\n",
     "print(f\"CORPUS DISTINCT 2: {distn.get_corpus_distinct(h['nbest5'], 2)}\")\n",
-    "print(f\"SENTENCE AVERAGE DISTINCT 2: {distn.calc_sentence_distinct_average(h['nbest5'], 2)}\")\n"
+    "# print(f\"SENTENCE AVERAGE DISTINCT 2: {distn.calc_sentence_distinct_average(h['nbest5'], 2)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -104,18 +124,16 @@
      "output_type": "stream",
      "text": [
       "REF CORPUS DISTINCT 1: 2.5186372065973175\n",
-      "REF SENTENCE AVERAGE DISTINCT 1: 80.92419940956984\n",
-      "REF CORPUS DISTINCT 2: 16.900777753252864\n",
-      "REF SENTENCE AVERAGE DISTINCT 2: 95.2944494477994\n"
+      "REF CORPUS DISTINCT 2: 16.900777753252864\n"
      ]
     }
    ],
    "source": [
     "print(f\"REF CORPUS DISTINCT 1: {distn.get_corpus_distinct(r['0'], 1)}\")\n",
-    "print(f\"REF SENTENCE AVERAGE DISTINCT 1: {distn.calc_sentence_distinct_average(r['0'], 1)}\")\n",
+    "# print(f\"REF SENTENCE AVERAGE DISTINCT 1: {distn.calc_sentence_distinct_average(r['0'], 1)}\")\n",
     "\n",
     "print(f\"REF CORPUS DISTINCT 2: {distn.get_corpus_distinct(r['0'], 2)}\")\n",
-    "print(f\"REF SENTENCE AVERAGE DISTINCT 2: {distn.calc_sentence_distinct_average(r['0'], 2)}\")\n"
+    "# print(f\"REF SENTENCE AVERAGE DISTINCT 2: {distn.calc_sentence_distinct_average(r['0'], 2)}\")\n"
    ]
   },
   {
